<resources>
    <string name="Common_ReportPage">報告</string>
    <string name="Tip_CurrentCityUnsupport">現在この地域の対応情報はありません。</string>
    <string name="Setting_Me">本人</string>
    <string name="Tip_ChooseCityAndGetWeather">地域を選択してリアルタイムの天気予報を獲得しよう。</string>
    <string name="Tip_UsernamePasswordFormatLimit">アカウント名とパスワードはアルファベットと数字のみになります。</string>
    <string name="Setting_ContactInfo">直接連絡がほしい場合は以下をご記入ください。</string>
    <string name="Common_NickName">ニックネーム</string>
    <string name="News_ContentTrash">良くない</string>
    <string name="Push_NewsTip">重要なニュース通知</string>
    <string name="Time_Mon">月曜日</string>
    <string name="Tip_ReportCommentCancel">報告を取り消しました</string>
    <string name="Query_Search">検索</string>
    <string name="Auth_Camera">写真も一緒にフィードバックに送信すると、不具合の迅速な解決に役立ちます。</string>
    <string name="Report_CopyrightIssue">著作権について</string>
    <string name="Common_TakePhoto">写真を撮る</string>
    <string name="Permission_Common_Title_Permission_Failed">権限が許可されませんでした</string>
    <string name="Search_VideoTab">動画</string>
    <string name="Common_Close">閉じる</string>
    <string name="Tip_NewsShareCancel">シェアを取消しました</string>
    <string name="Setting_ContactDescription">Skype、 LINEなど</string>
    <string name="Common_Cancel">キャンセル</string>
    <string name="Report_Cancel">キャンセル</string>
    <string name="Setting_Profile">個人情報</string>
    <string name="Time_NumberMinutesAgo">%1$s分前</string>
    <string name="UserInfoCollection_GenderFemale">女性</string>
    <string name="Tip_ConfirmDeleteComment">このコメントを削除しますか？</string>
    <string name="Tip_ContentTrashDescription">このニュースをあまり気に入ってないみたいですね。削除をすると、今後このジャンルのニュース表示が少なくなりますよ。</string>
    <string name="News_LastTimeReadClickRefresh">この前ここまで読みました · タップして更新</string>
    <string name="Comment_InvalidContent">こちらの内容は削除されました。</string>
    <string name="Tip_NewsShareSuccess">シェア完成</string>
    <string name="Auth_Bluetooth">%1$sの利用時にBluetoothをオンにする必要があります。</string>
    <string name="Common_CopyLink">コピーリンク</string>
    <string name="News_RelatedNews">関連ニュース</string>
    <string name="Tip_AccountExisted">アカウントが既に存在します。直接ログインしてください</string>
    <string name="Weather_SearchCityTip">市区町村を検索</string>
    <string name="Setting_FontSize_XL">最大</string>
    <string name="Auth_Calendar">%1$sの利用時にカレンダーへのアクセスが必要です。</string>
    <string name="Tip_NewsShareFail">シェア失敗</string>
    <string name="Common_PullDownToRefresh">引き下げて更新</string>
    <string name="Weather_Weather">天気</string>
    <string name="Tip_SubmitFailed">送信失敗</string>
    <string name="Tip_PasswordLengthLimit">パスワードは2〜20文字で入力してください。</string>
    <string name="Tip_UnsharableNews">この記事はシェアできません</string>
    <string name="Weather_NoData">天気情報なし</string>
    <string name="Setting_NewsComment">コメント</string>
    <string name="Tip_ReportCommentFail">報告失敗</string>
    <string name="Channel_Sport">スポーツ</string>
    <string name="SharePage_ClickToUnfoldNews">タップして全文を読む</string>
    <string name="Tip_NewsUnfollowFail">お気に入りの取り消しに失敗しました</string>
    <string name="News_InvalidContent">この記事は期限が切れました。</string>
    <string name="Common_ClickToRetry">タップして再試行します</string>
    <string name="Tip_Sending">送信中</string>
    <string name="Tip_Unsharable">シェアできません</string>
    <string name="Tip_PleaseEnterAccount">ユーザー名を入力してください</string>
    <string name="Report_Title">報告</string>
    <string name="Channel_Society">国内</string>
    <string name="Tip_CommentDeleteSuccess">削除しました</string>
    <string name="Setting_CurrentVersion">バージョン</string>
    <string name="Video_ReadOnWeb">オリジナルビデオへ</string>
    <string name="Tip_NewsFollowedFail">追加失敗</string>
    <string name="Channel_Politics">政治</string>
    <string name="Comment_Comment">コメント</string>
    <string name="Common_OptionPrivacy">プライバシーについて</string>
    <string name="Common_Delete">削除</string>
    <string name="Query_NoResults">検索結果がありません</string>
    <string name="UserInfoCollection_KnowYouBetter">あなたに寄り添うアプリ</string>
    <string name="Common_OK">決定</string>
    <string name="Tip_ContentHasFeedbackNegative">すでに「よくないね」しました</string>
    <string name="Common_LoadFailed">読み込み失敗</string>
    <string name="Common_Twitter">Twitter</string>
    <string name="Common_LINE">LINE</string>
    <string name="Report_MailReportTitle">Improper Content Report</string>
    <string name="Weather_SupplementAttention">注意：</string>
    <string name="LandingPage_AboutContactPart">連絡先：report@newsbox-inc.com</string>
    <string name="Setting_Following">お気に入り</string>
    <string name="Tip_UploadAvatarFail">写真のアップロードに失敗しました</string>
    <string name="Tip_NicknameSaveFail">ニックネームの変更に失敗しました</string>
    <string name="Setting_Feedback">フィードバック</string>
    <string name="Time_Fri">金曜日</string>
    <string name="Search_NewsTab">ニュース</string>
    <string name="Common_GoToNewsBox">最新内容はNewsBoxへ</string>
    <string name="Weather_SelectLocation">地域を設定してください</string>
    <string name="Push_PleaseSetUpPush">重要なニュースを見逃さないプッシュ通知を設定しよう</string>
    <string name="Comment_Reply">返信する</string>
    <string name="Time_NumberHour">%1$s時</string>
    <string name="Time_NumberHoursAgo">%1$s時間前</string>
    <string name="UserInfoCollection_Youth">30代</string>
    <string name="Common_OriginalAriticle">全文</string>
    <string name="Video_Video">動画</string>
    <string name="Common_ReadThisOnTheWeb"> オリジナルサイトで読む</string>
    <string name="LandingPage_AboutPartTwo">最高の使用体験を提供するために昼夜問わず一緒懸命働いています。</string>
    <string name="Query_PopularSearches">人気検索</string>
    <string name="Tip_LoginAndGetRecNews">ログインしてあなただけのカスタマイズニュースを。</string>
    <string name="Tip_CommentLiked">「いいね」しました</string>
    <string name="Common_Message">メッセージ</string>
    <string name="Comment_Anonymous">匿名</string>
    <string name="Time_Sun">日曜日</string>
    <string name="Push_Choose">選択する </string>
    <string name="Setting_UserTerms">利用規約</string>
    <string name="Tip_LogInFail">ログイン失敗</string>
    <string name="Report_Porn">わいせつ物</string>
    <string name="Query_TypeInSearchKeyword">&#160;検索キーワードを入力</string>
    <string name="Tip_CommentLikeFail">「いいね」できませんでした</string>
    <string name="Common_Loading">ロード中</string>
    <string name="Tip_GetNumberArticleForYou">%1$s本のニュースを見つけました</string>
    <string name="Tip_UsernameLengthLimit">アカウント名は2〜20文字で入力してください。</string>
    <string name="UserInfoCollection_Skip">スキップ</string>
    <string name="Comment_OverdueContent">こちらの内容は期限が切れました。</string>
    <string name="Setting_FollowingNews">お気に入り</string>
    <string name="Common_Open">オープン</string>
    <string name="Tip_LocatingUnavailableGoSetting">位置情報サービスをオンにしてください。</string>
    <string name="Report_HateSpeech">悪質行為</string>
    <string name="News_GuideTip">NewsBox</string>
    <string name="Tip_LogInSuccess">ログイン完了</string>
    <string name="Common_OptionNews">ニュース</string>
    <string name="Common_ReleaseToRefresh">放して更新</string>
    <string name="Setting_FontSize_S">小</string>
    <string name="Setting_MyComment">私のコメント</string>
    <string name="Setting_Setting">設定</string>
    <string name="Common_OptionPorn">わいせつ物</string>
    <string name="Tip_Unsupported">シェアには対応しておりません</string>
    <string name="Weather_DefaultDescription">最新天気情報にご注意ください</string>
    <string name="Setting_FontSize">文字のサイズ</string>
    <string name="Permission_Common_Message_Permission_Failed">アクセスが拒否された或いはシステムエラーが生じました。全機能をご使用いただくためには、端末の[設定]にてアクセスを許可してください。</string>
    <string name="Setting_FontSizeSampleNewsTimeDate">2017-08-23T16:00:00.000Z</string>
    <string name="Common_OptionOther">その他</string>
    <string name="Tip_ReportCommentSuccess">報告しました</string>
    <string name="Common_Yes">はい</string>
    <string name="Setting_NotInterest">興味なし</string>
    <string name="Setting_FontSize_L">大</string>
    <string name="Setting_FontSize_M">中</string>
    <string name="Tip_NoNetwork">インターネット接続がありません</string>
    <string name="News_News">ニュース</string>
    <string name="Report_Privacy">プライバシー関連</string>
    <string name="Setting_FontSizeSampleNewsTimeTitle">助けて…！一家団欒中の柴犬の赤ちゃんに起きたハプニング</string>
    <string name="Setting_DefinitionSetting">動画の画質</string>
    <string name="Query_ClearSearchHistory">検索履歴をクリアします</string>
    <string name="Setting_LoginAgreementPartTwo">『利用規約』</string>
    <string name="Weather_Location">位置情報</string>
    <string name="Tip_PleaseEnterPassword">パスワードを入力してください</string>
    <string name="Tip_ImageSaveSuccess">写真を保存しました</string>
    <string name="Tip_LogOutFail">ログアウト失敗</string>
    <string name="Common_SystemShare">システムシェア</string>
    <string name="Setting_LoginOrRegister">ログイン/登録</string>
    <string name="Tip_NoComment">コメント履歴がありません</string>
    <string name="Permission_Common_Cancel">キャンセル</string>
    <string name="Tip_PhoneLocateFail">位置情報の獲得に失敗しました</string>
    <string name="Setting_StandardDefinition">480p</string>
    <string name="Permission_Common_Resume">設定</string>
    <string name="UserInfoCollection_MiddleAge">40代〜</string>
    <string name="Common_OptionCopyrightInfringement">著作件について</string>
    <string name="Report_OtherTitle">報告内容</string>
    <string name="Push_PleaseLogIn">ログインしてあなただけのカスタマイズニュースを</string>
    <string name="Tip_UnlikeSuccess">よくないにしました</string>
    <string name="Tip_NoFollowing">追加内容がありません</string>
    <string name="Time_JustNow">今</string>
    <string name="Common_Google">Google</string>
    <string name="Tip_ContentNotInterested">このニュースを削除すると、類似ニュースの表示が減ります。</string>
    <string name="LandingPage_IntroPartOne">NewsBoxは最新のトレンドと新着ニュースが揃うニュースアプリです。</string>
    <string name="Weather_UseCurrentLocation">現在地にする</string>
    <string name="Tip_CancelLikeSuccess">いいねを取り消しました</string>
    <string name="Tip_CommentTooLong">%1$s文字超過しています</string>
    <string name="Setting_Definition">画質</string>
    <string name="Setting_TapToEnter">タップしてフィードバックを入力</string>
    <string name="Tip_PullDownToGetNews">引き下げて最新情報を獲得する</string>
    <string name="Tip_CommentPlaceHolder">&#160;返信内容を入力してください</string>
    <string name="Tip_SwitchToLogin">ログインに切り替える</string>
    <string name="Channel_Economy">経済</string>
    <string name="Tip_LogOutAlert">ログアウト後、お気に入りの同期及びコメントの投稿ができません</string>
    <string name="Common_SaveFail">保存失敗</string>
    <string name="Common_ClickToDownload">タップしてダウンロードする</string>
    <string name="Tip_CommentRemainCharacter">残り%1$s文字入力できます</string>
    <string name="Tip_MailUnsupported">メールには対応しておりません</string>
    <string name="Time_Wed">水曜日</string>
    <string name="LandingPage_IntroPartFour">あなたのほしい情報はすべてここに！</string>
    <string name="Tip_CopyDone">コピーしました</string>
    <string name="News_ContentNegative">やだね</string>
    <string name="Common_Loaded">読み込み完了</string>
    <string name="Common_Done">完了</string>
    <string name="Weather_RainPossibility">降水確率</string>
    <string name="Common_Unfavorite">お気に入り済み</string>
    <string name="Setting_UploadImage">写真をアップロード</string>
    <string name="Tip_ReportSelectOneReason">報告理由をお選びください</string>
    <string name="Common_Save">保存</string>
    <string name="Tip_TapForMore">タップしてさらに読み込む</string>
    <string name="Common_Edit">編集</string>
    <string name="Tip_CommentPostFail">レビュー投稿失敗しました</string>
    <string name="Tip_SwitchToRegister">登録に切り替える</string>
    <string name="Common_Post">投稿する</string>
    <string name="UserInfoCollection_Juvenile">10代〜20代</string>
    <string name="Setting_FontSizeSampleNewsTimeSource">わんちゃんホンポ</string>
    <string name="Tip_WrongInput">入力してください</string>
    <string name="Source_Default">インターネット</string>
    <string name="Common_ProfileAvatar">プロフィール写真</string>
    <string name="Push_Setting">通知設定</string>
    <string name="Report_Back">戻る</string>
    <string name="Common_LogOut">ログアウト</string>
    <string name="Setting_Comment">ご意見：</string>
    <string name="Setting_PleaseDescribeProblem">問題解決のため、できるだけ詳しくご説明ください。</string>
    <string name="Report_InputPlaceholder">具体的に説明してください。</string>
    <string name="Common_Submit">送信</string>
    <string name="Common_Gender">性別</string>
    <string name="Common_AgeStage">年齢層</string>
    <string name="UserInfoCollection_AlertMessage">あなたにぴったりな内容を用意しました！さっそく見てみよう</string>
</resources>