<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Core.Widget.Layout.Parent.Layer"
    tools:context=".page.activity.MainActivity">

    <com.mynews.common.extension.widget.bar.status.StatusBar
        android:id="@id/status_bar"
        style="@style/Core.Widget.StatusBar"
        android:background="@color/color_status_bar"/>

    <com.mynews.common.extension.widget.bar.title.TitleBar
        android:id="@id/title_bar"
        style="@style/Core.Widget.TitleBar"
        app:showBack="false"
        app:title="@string/Setting_Feedback">

        <com.mynews.common.core.widget.CoreTextView
            android:id="@id/back_btn"
            style="@style/AppTheme.TitleBar.Btn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/Common_Cancel"
            android:textColor="@color/color_1"
            app:useCommonPressedEffect="true"/>

        <com.mynews.common.core.widget.CoreTextView
            android:id="@+id/submit_btn"
            style="@style/AppTheme.TitleBar.Btn"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:enabled="false"
            android:focusable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/Common_Submit"
            android:textColor="@color/common_title_enable_btn_selector"
            app:useCommonPressedEffect="true"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/submit_btn"
            android:layout_alignEnd="@+id/submit_btn"
            android:layout_alignLeft="@+id/submit_btn"
            android:layout_alignRight="@+id/submit_btn"
            android:layout_alignStart="@+id/submit_btn"
            android:layout_alignTop="@+id/submit_btn"
            android:padding="13dp"
            android:visibility="gone"/>

    </com.mynews.common.extension.widget.bar.title.TitleBar>

    <com.mynews.common.core.widget.CoreTextView
        android:id="@+id/setting_comment_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="23dp"
        android:focusable="false"
        android:gravity="start|center_vertical"
        android:text="@string/Setting_Comment"
        android:textColor="@color/color_2"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_bar"/>

    <com.mynews.common.core.widget.CoreTextView
        android:id="@+id/feedback_description_limit_txt"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:focusable="false"
        android:gravity="center|end"
        android:text="200"
        android:textColor="@color/color_4"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/setting_comment_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/setting_comment_label"
        tools:ignore="HardcodedText"/>

    <com.mynews.common.core.widget.CoreEditText
        android:id="@+id/feedback_description_etxt"
        android:layout_width="0dp"
        android:layout_height="107dp"
        android:layout_marginTop="9dp"
        android:background="@color/color_8"
        android:gravity="start|top"
        android:hint="@string/Setting_PleaseDescribeProblem"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:lineSpacingExtra="2dp"
        android:maxLength="200"
        android:paddingBottom="10dp"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:paddingTop="10dp"
        android:textColor="@color/color_1"
        android:textColorHint="@color/color_4"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_comment_label"/>

    <com.mynews.common.core.widget.CoreTextView
        android:id="@+id/setting_contactinfo_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="23dp"
        android:focusable="false"
        android:gravity="start|center_vertical"
        android:maxLines="1"
        android:text="@string/Setting_ContactInfo"
        android:textColor="@color/color_2"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_description_etxt"/>

    <com.mynews.common.core.widget.CoreEditText
        android:id="@+id/feedback_contact_etxt"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="9dp"
        android:background="@color/color_8"
        android:gravity="start|center_vertical"
        android:hint="@string/Setting_ContactDescription"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:lineSpacingExtra="2dp"
        android:maxLength="120"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:textColor="@color/color_1"
        android:textColorHint="@color/color_4"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_contactinfo_label"/>

    <com.mynews.common.core.widget.CoreTextView
        android:id="@+id/upload_picture_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="32dp"
        android:clickable="false"
        android:focusable="false"
        android:text="@string/Setting_UploadImage"
        android:textColor="@color/color_2"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_contact_etxt"/>

    <com.mynews.common.core.widget.CoreSimpleDraweeView
        android:id="@+id/upload_picture_img"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="9dp"
        android:clickable="true"
        android:contentDescription="@null"
        android:focusable="true"
        app:actualImageScaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_picture_btn"
        app:placeholderImage="@drawable/feedback_upload_pic_img_default"
        app:placeholderImageScaleType="fitXY"
        app:useCommonPressedEffect="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>
