<?xml version="1.0" encoding="utf-8"?>
<com.mynews.common.core.widget.CoreRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Core.Widget.Layout.Parent.Layer"
    android:background="@color/transparent"
    android:clickable="false"
    android:fitsSystemWindows="true"
    android:focusable="false"
    android:focusableInTouchMode="false"
    tools:background="@color/black_50"
    tools:context=".page.activity.MainActivity">

    <View
        style="@style/AppTheme.Core.Widget.Line.Horizontal"
        android:layout_above="@+id/comment_layout"/>

    <com.mynews.common.core.widget.CoreRelativeLayout
        android:id="@+id/comment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/color_9"
        android:clickable="true"
        android:paddingBottom="15dp"
        tools:ignore="KeyboardInaccessibleWidget">

        <com.mynews.common.core.widget.CoreTextView
            android:id="@+id/report_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:paddingBottom="17dp"
            android:paddingTop="17dp"
            android:text="@string/Report_OtherTitle"
            android:textColor="@color/color_1"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <com.mynews.common.core.widget.CoreTextView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/report_txt"
            android:layout_alignTop="@+id/report_txt"
            android:drawableLeft="@drawable/report_back_btn"
            android:drawablePadding="2dp"
            android:drawableStart="@drawable/report_back_btn"
            android:gravity="center_vertical"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:text="@string/Report_Back"
            android:textColor="@color/color_2"
            android:textSize="14sp"/>

        <com.mynews.common.core.widget.CoreEditText
            android:id="@+id/report_input_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/report_txt"
            android:layout_marginLeft="14dp"
            android:layout_toLeftOf="@+id/submit_btn"
            android:background="@drawable/user_input_dialog_bg"
            android:enabled="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:hint="@string/Report_InputPlaceholder"
            android:lineSpacingExtra="4dp"
            android:maxLength="140"
            android:minHeight="34dp"
            android:paddingBottom="9dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="9dp"
            android:textColor="@color/color_1"
            android:textColorHint="@color/color_4"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded"/>

        <com.mynews.common.core.widget.CoreTextView
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/report_input_etxt"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/report_input_etxt"
            android:enabled="false"
            android:gravity="center"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:text="@string/Common_Submit"
            android:textColor="@color/user_input_comment_sumbit_selector"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded"/>

    </com.mynews.common.core.widget.CoreRelativeLayout>

</com.mynews.common.core.widget.CoreRelativeLayout>
